--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ h1, h2 {
 </head>
 <body>
     <div class="game-container">
-        <h1>GAS Vocabulary Concentration</h1>
+        <h1>Vocabulary Concentration</h1>
         <p class="subtitle">Complete this concentration game successfully and earn a Pokemon!</p>
         <div class="stats">
             <div>Time: <span id="timer" class="timer">00:00</span></div>
